# CBBProject

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.txt  LICENSE  README.rst
cmake/: .PackageVersion.cmake.swp  CheckEnvironment.cmake  Documentation.cmake  FindSoftware.cmake  GenerateConfigFile.cmake  GitHooks.cmake  GithubSshTest.cmake  NewExecutable.cmake  PackageVersion.cmake  Packaging.cmake  Tests.cmake  XXXConfig.cmake.in
compositions/: simple.dtk
documentation/: ImageProcessingProjects.tex
include/: cbbExport.h
platform/: CMakeLists.txt
platform/Images/: .gitmodules  CMakeLists.txt  Makefile.am
platform/Images/Examples/: DeScramble.C  DisplayRegion.C  MakeGrad.C  NormGrad.C  Permute.C  Scramble.C
platform/Images/cmake-local/: IncludePackage.cmake
platform/Images/doc/: CMakeLists.txt  Doxyfile.in  Makefile.am  footer.html  header.html  header.xcf
platform/Images/doc/tutorial/: tutorial.tex
platform/Images/include/: CMakeLists.txt  Image.H
platform/Images/include/Images/: Convert.H  Defs.H  Exceptions.H  Image.H  ImageFilters.H  ImageIO.H  ImageViewer.H  Index.H  Iterators.H  Maps.H  MinMax.H  MultiDimCounter.H  NullPixel.H  PixelIO.H  PixelsMinMax.H  Polymorphic.H  Properties.H  RGBPixel.H  Region.H  ScalarType.H  Shape.H  Utils.H
platform/Images/include/Utils/: CpuUtils.H  GeneralizedIterators.H  IOUtils.H  InfoTag.H  Verbose.H  config.h.in  triplet.H
platform/Images/plugins/: Ami.C  Ami.H  CMakeLists.txt  Inrimage.C  Inrimage.H  Inrimage5.C  Inrimage5.H  Inrimage5Tools.H  PNG.C  PNG.H  PluginDefs.H  Pnm.C  Pnm.H  RawPgm.C  RawPgm.H  RawPpm.C  RawPpm.H  Vmr.C  Vmr.H  Vtk.C  Vtk.H
platform/Images/src/: CMakeLists.txt  Image.C  ImageIO.C  ImageIOPlugins.C  ImageViewer.C  Plugins.C  RGBPixel.C
platform/Images/tests/: BaseImageAccess.C  CMakeLists.txt  Compare.C  Convert.C  Convert3D.C  ConvertPgmToInrimage.C  Copy.C  DomainIterator.C  FormatConverter.C  GenericCheck  HalfSize.C  IOpointer.C  IOuchar2D.C  Inrimage5.C  Iterator3D.C  LowBits.C  MultiDimCounter.C  Order.C  PixelAccess.C  PixelAccess3D.C  PixelConstIterator.C  PixelIterator.C  RawPgmIOuchar2D.C  ReadColor.C  ReadWrite.C  ScaleValues.C  Shift.C  SimpleImage3D.C  Stats.C  Swap.C  SwapBytes.C  TODO  Type.C  runTest.cmake
platform/Images/tests/cmake/: ImagesTests.cmake
platform/Images/tests/images/: Impulse_Response.inr  bear-le-compressed.inr5  bear-le.inr5  bear.float.inr  bear.pgm  bear.ppm  irm.inr  irm.short.inr
platform/Images/tests/results/: AddFormat.output  BilinearInterpolation2D-le.inr  Boundary.output  Color.output  Compare.output  Convert.output  DomainIterator.output  EDP-le.output  Filters.output  Gaussian-le.inr  Grad-le.inr  HalfSize.output  ImageFilters-le.inr  ImageRecFilters-le.inr  Insert.inr  Iterator3D.output  LineIterator.output  Linear.output  LowBits.inr  MinMax.output  MultiDimCounter.output  Null.pgm  NullImage.inr  Order.output  PixelAccess.output  PixelConstIterator.output  PixelIterator.output  ReadWrite-le.inr  RecFilters.output  Region.output  ScaleValues.output  Simple3D.inr5  SliceIterator.output  Smooth-le.inr  SphereNormals-le.inr  Square.output  Stats.output  SubImage.output  SubSample.output  Swap.output  (+24 more)
platform/Images/viewer/: CMakeLists.txt  ImageViewer.C  ImageViewer.H  ZViewer.C
platform/Maths/include/Maths/: Arith.H  Vectors.H
platform/Utils/: CMakeLists.txt
platform/Utils/include/: CMakeLists.txt
platform/Utils/include/Utils/: Cpu.H  CpuUtils.H  GeneralizedIterators.H  IOInit.H  IOUtils.H  InfoTag.H  Plugins.H  Types.H  Verbose.H  config.h.in  triplet.H
platform/Utils/src/: CMakeLists.txt  Plugins.C  dlfcn.c  dlfcn.h
platform/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow_p.h  main.cpp
platform/interface/: CMakeLists.txt
platform/interface/Composer/: CMakeLists.txt  cbbComposerFactory.cpp  cbbComposerFactory.h  cbbComposerNodeImage.cpp  cbbComposerNodeImage.h  cbbComposerNodeView.cpp  cbbComposerNodeView.h  sislComposerNodeSplineBlender.cpp  sislComposerNodeSplineBlender.h
platform/interface/Core/: CMakeLists.txt  cbbAbstractImage.cpp  cbbAbstractImage.h  cbbView.cpp  cbbView.h  cbbView_p.h  sislAbstractSplineBlender.cpp  sislAbstractSplineBlender.h  sislAbstractSplineBlender_p.h
plugins/: CMakeLists.txt
plugins/cbbDataImage/: CMakeLists.txt  README.txt  cbbDataImage.cpp  cbbDataImage.h  cbbDataImagePlugin.cpp  cbbDataImagePlugin.h  cbbDataImagePluginConfig.h.in  cbbDataImagePluginExport.h
plugins/cbbViewImage/: CMakeLists.txt  cbbViewImage.cpp  cbbViewImage.h  cbbViewImagePlugin.cpp  cbbViewImagePlugin.h  cbbViewImagePluginConfig.h.in  cbbViewImagePluginExport.h
utils/git/: update
