SET(Images_LIB_SOURCES Image.C RGBPixel.C ImageIO.C)

ADD_LIBRARY(Images SHARED ${Images_LIB_SOURCES})
TARGET_LINK_LIBRARIES(Images)

SET_TARGET_PROPERTIES(Images PROPERTIES
                      VERSION
                      ${PACKAGE_VERSION_MAJOR}.${PACKAGE_VERSION_MINOR}
                      SOVERSION 0
                      CLEAN_DIRECT_OUTPUT 1)

ADD_DEFINITIONS(-DIMAGE_IO_PLUGINS_DEFAULT_LIST=\"${PLUGIN_DIRECTORY}/default.plugins\")
ADD_LIBRARY(ImagesIOPlugins SHARED ImageIOPlugins.C)
TARGET_LINK_LIBRARIES(ImagesIOPlugins Images Plugins)

SET_TARGET_PROPERTIES(ImagesIOPlugins PROPERTIES
                      VERSION
                      ${PACKAGE_VERSION_MAJOR}.${PACKAGE_VERSION_MINOR}
                      SOVERSION 0
                      CLEAN_DIRECT_OUTPUT 1)

SET(LIB_DESTINATION ${CMAKE_INSTALL_LIBDIR}/Odyssee++)

INSTALL(TARGETS Images ImagesIOPlugins EXPORT Images
        LIBRARY DESTINATION ${INSTALL_LIB_DIR}
        ARCHIVE DESTINATION ${INSTALL_LIB_DIR}
        PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}"
        COMPONENT runtime)
